@@ -6,6 +6,7 @@
 
 * bug fix
   * `update_with_password` now relies on assign_attributes and forwards the :as option (by @wtn)
+  * Do not trigger timeout on sign in related actions
 
 * deprecations
   * Strategy#validate() no longer validates nil resources
